--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -10,6 +10,7 @@
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
+  text-align: justify;
 }
 
 .headingLg {
@@ -21,6 +22,12 @@
 .headingMd {
   font-size: 1.2rem;
   line-height: 1.5;
+}
+
+.blogPara {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  text-align: justify;
 }
 
 .borderCircle {
@@ -35,14 +42,36 @@
   padding-top: 1px;
 }
 
-.list {
+.blogList {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.listItem {
+.blogItem {
   margin: 0 0 1.25rem;
+  background: #edf0f0;
+  padding: 12px;
+  border: 1px solid rgba(0,0,0,0.15);
+  border-radius: 3px;
+  cursor: pointer;
+  color: black;
+  text-align: justify;
+  font-size: 1rem;
+}
+
+.blogItem:hover {
+  background-color: #333;
+  color: white;
+  -webkit-transition: background-color 0.15s ease-out, color 0.15s ease-out;
+  -moz-transition: background-color 0.15s ease-out, color 0.15s ease-out;
+  -o-transition: background-color 0.15s ease-out, color 0.15s ease-out;
+  transition: background-color 0.15s ease-out, color 0.15s ease-out;
+}
+
+.blogItem a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .lightText {
