--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -6,7 +6,7 @@
 .innerContainer {
   min-width: 100%;
   padding: 0rem 10%;
-  margin: 1rem auto;
+  margin: 1rem auto 0rem auto;
 }
 
 ul.topnav {
@@ -69,9 +69,9 @@ ul.topnav li.register {
   background-color: white;
   color:#1E90FF;
   font-weight: bolder;
-  border: 3px solid #1E90FF;
-  border-radius: 4px;
-  padding: 8px 16px;
+  border: 4px solid #1E90FF;
+  border-radius: 1px;
+  padding: 12px 24px;
   box-sizing: border-box;
   display: inline-block;
   text-decoration: none;
@@ -84,4 +84,20 @@ ul.topnav li.register {
   -moz-transition: background-color 0.15s ease-out, color 0.15s ease-out;
   -o-transition: background-color 0.15s ease-out, color 0.15s ease-out;
   transition: background-color 0.15s ease-out, color 0.15s ease-out;
+}
+
+.footerContainer {
+  width: 100%;
+  min-height: 72px;
+  padding: 1px 0px;
+  margin-top: 48px;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  position: static;
+  bottom: 0;
+}
+
+.footerContainer p {
+  font-size: 1rem;
 }
